DELETED las endpoint created and CREATED new endpoint to return all avaliable centers for user
