# Backend/swagger2.yaml
@@ -62,6 +62,25 @@
         }
       }
     },
+    "/apirc/v1/auth/my-centers": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/apirc/v1/upload-csv": {
       "post": {
         "description": "",
